<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2017 Jeff Gilfelt.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~      http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<resources>
    <string name="netspy_name">NetSpy</string>
    <string name="netspy_notification_title">Recording HTTP activity</string>
    <string name="netspy_clear">Clear</string>
    <string name="netspy_browse_sql_database">Browse SQLite database</string>
    <string name="netspy_overview">Overview</string>
    <string name="netspy_request">Request</string>
    <string name="netspy_response">Response</string>
    <string name="netspy_url">URL</string>
    <string name="netspy_method">Method</string>
    <string name="netspy_protocol">Protocol</string>
    <string name="netspy_status">Status</string>
    <string name="netspy_ssl">SSL</string>
    <string name="netspy_request_time">Request time</string>
    <string name="netspy_response_time">Response time</string>
    <string name="netspy_duration">Duration</string>
    <string name="netspy_request_size">Request size</string>
    <string name="netspy_response_size">Response size</string>
    <string name="netspy_total_size">Total size</string>
    <string name="netspy_yes">Yes</string>
    <string name="netspy_no">No</string>
    <string name="netspy_share">Share</string>
    <string name="netspy_share_as_text">Share as text</string>
    <string name="netspy_share_as_curl">Share as curl command</string>
    <string name="netspy_body_omitted">(encoded or binary body omitted)</string>
    <string name="netspy_search">Search</string>
    <string name="netspy_body_unexpected_eof">\n\n--- Unexpected end of content ---</string>
    <string name="netspy_body_content_truncated">\n\n--- Content truncated ---</string>
    <string name="notification_category">NetSpy HTTP notifications</string>
</resources>
