<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/netspy_ic_search_white_24dp"
        android:title="@string/netspy_search"
        android:visible="true"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:icon="@drawable/netspy_ic_share_white_24dp"
        android:title="@string/netspy_share"
        app:showAsAction="always">
        <menu>
            <group>
                <item
                    android:id="@+id/share_text"
                    android:title="@string/netspy_share_as_text" />
                <item
                    android:id="@+id/share_curl"
                    android:title="@string/netspy_share_as_curl" />
            </group>
        </menu>
    </item>
</menu>