<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".internal.ui.TransactionOverviewFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_url" />

            <TextView
                android:id="@+id/url"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="https://example.com/path/to/resource?here=might_be_really_long" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_method" />

            <TextView
                android:id="@+id/method"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="GET" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_protocol" />

            <TextView
                android:id="@+id/protocol"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="HTTP/1.1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_status" />

            <TextView
                android:id="@+id/status"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Complete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_response" />

            <TextView
                android:id="@+id/response"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="200 OK" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_ssl" />

            <TextView
                android:id="@+id/ssl"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Yes" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_request_time" />

            <TextView
                android:id="@+id/request_time"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="05/02/17 11:52:49" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_response_time" />

            <TextView
                android:id="@+id/response_time"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="05/02/17 11:52:49" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_duration" />

            <TextView
                android:id="@+id/duration"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="405 ms" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_request_size" />

            <TextView
                android:id="@+id/request_size"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="53 KB" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_response_size" />

            <TextView
                android:id="@+id/response_size"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="148 KB" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NetSpy.TextAppearance.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netspy_total_size" />

            <TextView
                android:id="@+id/total_size"
                style="@style/NetSpy.TextAppearance.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="201 KB" />

        </TableRow>

    </TableLayout>

</android.support.v4.widget.NestedScrollView>
